--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/alurafood-pedidos?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.application.name=pedidos-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+
+#gera em porta aleatória
+server.port=0
