--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/alurafood-pedidos?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:password@localhost:3306/alurafood-pedidos?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.application.name=pedidos-ms
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
-eureka.instance.instance-id=${spring.application.name}:${random.int}
+#eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+#eureka.instance.instance-id=${spring.application.name}:${random.int}
 
 #gera em porta aleatória
-server.port=0
+#server.port=0
